--- a/user_manual/user_manual.tex
+++ b/user_manual/user_manual.tex
@@ -271,15 +271,133 @@ The \texttt{params\_file.yml} outlines all the parameters needed in order to run
 
 
 
-\subsection{Calibration}
+\subsection{Calibration guide}
 
-A good calibration is key to having success in your PTV experiment! Thus, follow this guide to calibrate your camera using MyPTV.
-
-
-First, we need to prepare a \textit{target file}. This is a text file which lists the lab-space coordinates of all the points on our calibration target according to the format shown in Fig.~\ref{fig:target_file}. Prepare such a file and save it in the experiment's calibration folder.
+A good calibration is key to having success in your PTV experiment! Thus, follow this guide to calibrate your camera using MyPTV. 
 
 
-Then, each camera in MyPTV is calibrated separately. Thus, to calibrate a camera, we make sure that we have a calibration image ready (as seen in Fig.~\ref{fig:cal_img}, for example). Then, we perform an initial "rough" calibration, and finish of with the final calibration. 
+Camera calibration consists of several steps in which we determine the external ($\vec{O}$, $\vec{\theta}$) and internal ($f$, $x_h,\,y_h$, $[E]$) parameters of our camera system. Each camera in MyPTV is calibrated separately using a \textit{calibration image} - an image of an object with marked points on it whose coordinates are known to us, a \textit{calibration target}. Therefore, to calibrate a camera, we make sure that we have a calibration image ready, as seen, for example, in Fig.~\ref{fig:cal_img}. 
+
+Importantly, since the goal is finding the cameras' positions, once a calibration image was taken in an experiment it is critical that the cameras are not moved. Also, the calibration target needs to be in the same medium in which the experiment will be performed to ensure that any refraction is corrected by the error terms (e.g. if you are using a tank of water, place the calibration target inside the tank of water). 
+
+
+A schematic block diageam for the calibration process of each camera is given in Fig.~\ref{fig:calibsteps}. The calibration is divided into two sub-processes: 1) initial calibration, in which we use only 6 calibration points to obtain an approximate calibration estimation, and, 2) final calibration, in which we use all the calibration points on the calibration target to improve the accuracy of the initial calibration. The various steps of the process are performed in MyPTV through the workflow script, and detailed instructions are given below. 
+
+
+\begin{figure}
+	\centering
+	\includegraphics[width=10cm]{Calibration_steps.pdf}
+	\caption{A block diagram representing the steps to follow in the calibration of each camera using MyPTV. \label{fig:calibsteps}}
+\end{figure}
+
+
+
+
+
+\subsubsection{Preparing the parameters in the \texttt{params\_file}}
+
+As in any step of MyPTV, we first make sure that the \texttt{params\_file.yaml} in our experiment folder has the correct parameters, namely file names under the calibration tab; see Tab.~\ref{tab:cal_paramsfile}. Each camera is calibrated separately, and so, for the calibration of each camera we need to change the file names in \texttt{params\_file.yaml} appropriately (alternatively, one could have separate parameter files for each camera).  
+
+\begin{table}
+	\centering
+	\caption{The \texttt{params\_file.yml} parameters for the calibration step. All paths to files are relative to the \texttt{workflow.py} script. \label{tab:cal_paramsfile}}
+	\begin{tabular}{l m{10cm}}
+		\hline
+		Parameter & Description\\
+		\hline
+		\texttt{camera\_name} & the name of the camera to be calibrated \\
+		
+		\texttt{calibration\_points\_file} & path to the file that lists the correlated lab space and image space coordinates \\
+		
+		\texttt{target\_file} & path to the file that lists the calibration target's lab points \\
+		
+		\texttt{segmented\_points\_file} & path of the file with segmented calibration points \\
+		
+		\texttt{calibration\_image} & path of the calibration image \\
+		
+		\texttt{resolution} & camera resolution; for example: 1280, 1024\\
+		\hline
+	\end{tabular}
+\end{table}
+
+
+
+
+
+\subsubsection{Initial calibraiton}\label{sec:init_calibration}
+
+
+For the initial calibration, follow these steps:
+
+\begin{enumerate}
+	\item \textit{Generate a camer file:} The camera file holds the camera parameters (see Fig.~\ref{fig:camfiles}). An empty camera file can be generated automatically by the workflow script when we start the calibration squence in a directory that doesn't havea  camera file in it (by running \texttt{python workflow.py params\_file.yml calibration} in the command line).
+	
+	\item \textit{Enter an initial guess:} Open the camera file just gnerated and insert an initial guess for the camrea's position ($\vec{O}$ in the first line, and $\vec{\theta}$ in the second line). See Fig.~\ref{fig:cam_pos_example} for a reference on how camera translations and orientations work. 
+	
+	\item \textit{Segment 6 calibration points:} Choose six points of the calibration target and prepare a file that lets MyPTV know their coordiantes in image space and in lab space (see Fig.~\ref{fig:calpointfile} for the format). The name of the file should be inserted under \texttt{calibration\_points\_file} in the \texttt{params\_file.yml}. \\
+	The calibration points file can be generated easilly using a dedicated user interface (GUI). To run the GUI, enter \texttt{python workflow.py params\_file calibration\_point\_gui} in the command line. Alternatively, if MyPTV can't find the \texttt{calibration\_points\_file}, the GUI will start automatically. Instruction are given in Fig.~\ref{fig:Cal_point_GUI}. Note, for best performance, it is best to have some asymmetry in the points chosen (e.g. see the blue crosses in Fig.~\ref{fig:Cal_point_GUI}).
+	
+	\item \textit{Calibrate using 6 points:} We now calibrate the camera (i.e. improve the initial guess), using the calibration sequence. To start the sequence enter \texttt{python workflow.py params\_file.yml calibration} in the command line. Then, the following actions can be chosen by the user:
+	\begin{verbatim}
+	1 - external parameters minimization 
+	2 - correction error term calibration
+	3 - print current camera parameters
+	4 - plot the projection of the calibration points
+	8 - save the current calibration results
+	9 - quit
+	\end{verbatim} 
+	To calibrate, use options 1 and 2 in iterations and observe the calibration error decreasing (error is given as RMS deviation in pixel units). Once the error had converged to a low level, lower than 1.0 and prefferably lower than 0.5, save the results (using 8).
+\end{enumerate}
+
+This concludes the initial calibration step.
+
+
+
+
+
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\textwidth]{Cam_pos_examples.pdf}
+	\caption{Two examples for camera setups. The (x, y, z) system represents the lab space, and the (x', y', z') represents the camera's system of reference. In (a) the camera's position is roughly $\vec{O} = (0,0,1)$, and an appropriate rotation vector could be $\vec{\theta} = (0,\pi,0)$. In (b) the camera's position might be $\vec{O} = (1,1,1)$, and the orientation vector might approximately be $\vec{\theta} = (-\frac{1}{2}\pi,-\frac{3}{4}\pi,0)$. Rules of thumb in trying to guess $\vec{\theta}$ are: 1) ask yourself how should one rotate the lab's frame of reference so that it alighns with the camera's frame of reference; 2) we first rotate around the x axis, then around y and then around z; 3) in many cases the origin of the images is on the top left corner, so a half a turn rotation around the z axis is often needed. \label{fig:cam_pos_example}}
+\end{figure}
+
+
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\textwidth]{Cal_point_GUI.pdf}
+	\caption{The calibration point segmentation GUI. 1 - the calibration image, with points to be segmented. 2 and 3 - scroll bars to explore the image. When the image is clicked a red cross apears (7) and its coordinates in image space are pronted in 4; to mark a calibration point click on it. 5 - to specify the lab space coordinates of the point, enter them in the correct tabs. 6 - once 'mark point' is clicked, the cross becomes blue (8), which means that the point's data was registered in the memory. to remove points from the register click 'Forget last point'. To save the points in the register click 'Save points' (the file name is the one given in \texttt{calibration\_points\_file}). To zoom in use the +/- buttons. To move the red cross more accurately, use Shift-Arrowkey. \label{fig:Cal_point_GUI}}
+\end{figure}
+
+
+
+
+\subsubsection{Final calibraiton}
+
+For the final calibration, follow these steps:
+
+
+\begin{enumerate}
+	\item \textit{Prepare a target file:} If there is no target file in the experimental folder, this is the time to generate one. A \textit{target file} is a text file which lists the lab-space coordinates of all the points on our calibration target according to the format shown in Fig.~\ref{fig:target_file}. Prepare such a file and save it in the experiment's calibration folder.
+	
+	\item \textit{Segment the calibration points:} To obtain the image space coordinates of all the calibration points we use the segmentation operation of the workflow script. To do so: 1) insert the name of the calibration image under the \texttt{Segmentation -> single\_image\_name} tab; 2) run the segmentation command - \texttt{python workflow.py params\_file.yml segmentation}. If the results are not satisfactory, change the segmentation parameters and re-run the segmentation command until you get it; then save the results (the file name used is the one under the \texttt{segmented\_points\_file} field in the \texttt{params\_file}). See also Sec.~\ref{sec:workflow_segment} for more details on the segmentation process.  
+	
+	\item \textit{Match points to target file:} Here we let MyPTV know which of the segmented points corresponds to which point in the target file. To do this, we used the command \texttt{python workflow.py params\_file.yml match\_target\_file}. This will generate a figure, highlighting the target file and the segmented results overladi by one another. Make sure that the two data match each other (see Fig.~\ref{fig:match_target_file}. If the results are good, save them by quitting the figure and entering 1 when prompted. If the match is not good, then the initial calibration was not good enough; enter 2 when prompted, and return to Sec.~\ref{sec:init_calibration} to improve the initial calibration.
+	
+	\item \textit{Calibrate using all points:} Now that we have segmented the necessary data, we return to the calibration sequence in the workflow to finish the calibration. Therefore, run \texttt{python workflow.py params\_file.yml calibration} in the command line. Then, the following actions can be chosen:
+	\begin{verbatim}
+	1 - external parameters minimization 
+	2 - correction error term calibration
+	3 - print current camera parameters
+	4 - plot the projection of the calibration points
+	8 - save the current calibration results
+	9 - quit
+	\end{verbatim} 
+	To calibrate, use options 1 and 2 in iterations and observe the calibration error decreasing (error is given as RMS deviation in pixel units). Once the error had converged to a low level, lower than 1.0 and prefferably lower than 0.5, save the results (using 8).
+\end{enumerate}
+
+Congratulations, this step completes the calibration process. 
 
 
 \begin{figure}[h]
@@ -288,48 +406,6 @@ Then, each camera in MyPTV is calibrated separately. Thus, to calibrate a camera
 	\caption{Format of the target file, which lists the lab-space coordinates of the calibration target as tab-separated values. The order at which points are given is not relevant. \label{fig:target_file}}
 \end{figure}
 
-
-\begin{table}
-\centering
-\caption{The \texttt{params\_file.yml} parameters for the calibration step. All paths to files are relative to the \texttt{workflow.py} script.}
-\begin{tabular}{l m{10cm}}
-	\hline
-	Parameter & Description\\
-	\hline
-	\texttt{camera\_name} & the name of the camera to be calibrated \\
-	
-	\texttt{calibration\_points\_file} & path to the file that lists the correlated lab space and image space coordinates \\
-	
-	\texttt{target\_file} & path to the file that lists the calibration target's lab points \\
-	
-	\texttt{segmented\_points\_file} & path of the file with segmented calibration points \\
-	
-	\texttt{calibration\_image} & path of the calibration image \\
-	
-	\texttt{resolution} & camera resolution; for example: 1280, 1024\\
-	\hline
-\end{tabular}
-\end{table}
-
-
-
-
-\subsubsection{Initial calibraiton}
-
-For each of the calibration images we make a \textit{calibration points file}. This is a file which lists the coordinates of the calibration target points in both lab space and image space coordinates. These text files follow a simple tab-separated format as shown in Fig.~\ref{fig:calpointfile}. Therefore:
-%
-\begin{enumerate}
-	\item Make a new text file. Name it, for example \texttt{cal\_points\_cam1}. Alternatively, copy the file from the \texttt{example/calibration} folder in MyPTV.
-	
-	\item Open the calibration image using an image viewer/editor (e.g. Microsoft paint, GIMP, Photoshop, or with matplotlib through \texttt{plt.imshow(plt.imread('path/to/image'))}).
-	
-	\item Choose about 6 points on the calibration target; measure their image space coordinates using the image editor and insert this information into the \textit{calibration points file}. Save and close the file.
-	
-	\item Once the \textit{calibration points file} is ready, calibrate the camera through the calibration scheme as outlined in Sec.~\ref{sec:cam_cal}.
-\end{enumerate}
-%
-
-The initial "rough" calibration is now finished. 
 
 
 \begin{figure}
@@ -340,72 +416,93 @@ The initial "rough" calibration is now finished.
 
 
 
+\begin{figure}
+	\centering
+	\includegraphics[width=8cm]{match_target_file.jpeg}
+	\caption{The results of matching a target file points (blue circles) and the segmented blobs (red crosses). Here, we know that the match is correct because each cross overlays a circle. In location where circles are not overlaid by a cross, the segmentation did not recognize a calibration target; having such missing points may slightly reduce the quiality of the calibration but it is not critical for the target file matching. \label{fig:match_target_file}}
+\end{figure}
 
 
 
-\subsubsection{Segmenting the calibration images and matching the target file}
 
 
-To prepare for the final calibration, we need to prepare a \textit{calibration points file} for the rest of the calibration points on our target. To avoid inserting the information for each point manually, we use a semi-automated process as follows:
+
+
+
+
+
 %
+%\subsubsection{Segmenting the calibration images and matching the target file}
+%
+%
+%To prepare for the final calibration, we need to prepare a \textit{calibration points file} for the rest of the calibration points on our target. To avoid inserting the information for each point manually, we use a semi-automated process as follows:
+%%
+%\begin{enumerate}
+%	\item Segment the calibration target points in the calibration image using the workflow script, as outlined in Sec.~\ref{sec:workflow_segment}. Save the segmented calibration points in the experiment's Calibration folder with a name such as \texttt{blobs\_cam1}. Insert the name of this file under the \texttt{segmented\_points\_file} field of the \texttt{params\_file.yml} file.
+%	
+%	\item Open the command line on the experiment directory, and run the workflow script with the following command:
+%	\begin{verbatim}
+%	python workflow.py params_file.yml match_target_file
+%	\end{verbatim}
+%	
+%	\item After automated sorting, a figure window should appear. Make sure that the blue points are overlaid with the red X's and close the figure window. Follow the instructions to save the calibration points file (under the name given in the \texttt{params\_file.yml} under\\ \texttt{calibration\_points\_file}). 
+%\end{enumerate}
+%
+%You should now have a file that contains the full information of the calibration points. Proceed with the fine calibration process.
+%
+%
+%
+%
+%
+%
+%\subsubsection{Calibration workflow}\label{sec:cam_cal}
+%
+%
+%Once all the data files are ready in the experiment folder, we use the workflow script to minimize the calibration error by tuning the cameras' external parameters and correction terms. Thus:
+%
+%\begin{enumerate}
+%	
+%	\item Start a terminal (or command line prompt), and change directory to the experiment's folder:
+%	\begin{verbatim}
+%	cd \path\to\the\experiment\folder
+%	\end{verbatim}
+%	
+%	\item Enter the following command:
+%	\begin{verbatim}
+%	python workflow.py params_file.yml calibration
+%	\end{verbatim}
+%	
+%	\item If a camera file does not yet exist in the folder, MyPTV had just generated an empty one for you. Locate this file in the experiment folder, enter an initial guess for the external parameters and save the file.
+%	
+%	\item If a camera file exists in the exprimental folder, an interactive dialogue should now appear in the terminal which offers:
+%	\begin{verbatim}
+%	1 - external parameters minimization 
+%	2 - correction error term calibration
+%	3 - print current camera parameters
+%	4 - plot the projection of the calibration points
+%	8 - save the current calibration results
+%	9 - quit
+%	\end{verbatim}
+%	Thus, proceed using options 1 and 2 in iterations and note the calibration error decreasing. Once satisfied, save the results.
+%	
+%\end{enumerate}
+%	
+
+
+\subsubsection{Important notes}
+
 \begin{enumerate}
-	\item Segment the calibration target points in the calibration image using the workflow script, as outlined in Sec.~\ref{sec:workflow_segment}. Save the segmented calibration points in the experiment's Calibration folder with a name such as \texttt{blobs\_cam1}. Insert the name of this file under the \texttt{segmented\_points\_file} field of the \texttt{params\_file.yml} file.
+	\item A "good" calibration will have a low error value - less than 0.5 pixels.  
 	
-	\item Open the command line on the experiment directory, and run the workflow script with the following command:
-	\begin{verbatim}
-	python workflow.py params_file.yml match_target_file
-	\end{verbatim}
-	
-	\item After automated sorting, a figure window should appear. Make sure that the blue points are overlaid with the red X's and close the figure window. Follow the instructions to save the calibration points file (under the name given in the \texttt{params\_file.yml} under\\ \texttt{calibration\_points\_file}). 
+	\item Optional validation - After all the cameras have been calibrated, it is also good practice to verify the calibration solution by stereo matching the calibration points. To do this, we use the \texttt{match\_blob\_files} (Section~\ref{sec:matching}) to stereo match the files of the segmented calibration target points. We can then calculate the so-called \textit{static calibration error} by computing the RMS of the distance between the triangulated calibration points and the real data from the target file. See Fig.~\ref{fig:cal_err} for an example. This validation step is not yet implemented in the workflow script. 
 \end{enumerate}
 
-You should now have a file that contains the full information of the calibration points. Proceed with the fine calibration process.
 
-
-
-
-
-
-\subsubsection{Calibration workflow}\label{sec:cam_cal}
-
-
-Once all the data files are ready in the experiment folder, we use the workflow script to minimize the calibration error by tuning the cameras' external parameters and correction terms. Thus:
-
-\begin{enumerate}
-	
-	\item Start a terminal (or command line prompt), and change directory to the experiment's folder:
-	\begin{verbatim}
-	cd \path\to\the\experiment\folder
-	\end{verbatim}
-	
-	\item Enter the following command:
-	\begin{verbatim}
-	python workflow.py params_file.yml calibration
-	\end{verbatim}
-	
-	\item If a camera file does not yet exist in the folder, MyPTV had just generated an empty one for you. Locate this file in the experiment folder, enter an initial guess for the external parameters and save the file.
-	
-	\item If a camera file exists in the exprimental folder, an interactive dialogue should now appear in the terminal which offers:
-	\begin{verbatim}
-	1 - external parameters minimization 
-	2 - correction error term calibration
-	3 - print current camera parameters
-	4 - plot the projection of the calibration points
-	8 - save the current calibration results
-	9 - quit
-	\end{verbatim}
-	Thus, proceed using options 1 and 2 in iterations and note the calibration error decreasing. Once satisfied, save the results.
-	
-\end{enumerate}
-	
-* Note, a "good" calibration will have a low error value - less than 0.5 pixels. 
-
-** Optional validation - After all the cameras have been calibrated, it is also good practice to verify the calibration solution by stereo matching the calibration points. To do this, we use the \texttt{match\_blob\_files} (Section~\ref{sec:matching}) to stereo match the files of the segmented calibration target points. We can then calculate the so-called \textit{static calibration error} by computing the RMS of the distance between the triangulated calibration points and the real data from the target file. See Fig.~\ref{fig:cal_err} for an example. This validation step is not yet implemented in the workflow script.
 
 
 \begin{figure}
 	\centering
-	\includegraphics[width=5cm]{cal_image.jpg}
+	\includegraphics[width=6cm]{cal_image.jpg}
 	\caption{An example of a calibration image. The points on the target have known lab space coordinates. Not also that the points are distributed over several plains (3 different $z$ values in this case). \label{fig:cal_img}}
 \end{figure}
 
